--- a/index.html
+++ b/index.html
@@ -32,10 +32,35 @@
                     </li>
                 </ul>
             </nav>
-            <ul class="contacts-list list">
-                <li class="contacts-item"><a class="contacts-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contacts-item"><a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+            <div class="contacts-container">
+                <ul class="contacts-list list">
+                    <li class="contacts-item">
+                        <ul class="header-contacts-list list">
+                            <a class="custom link" href="">
+                                <li class="header-contacts-item">
+                                    <a class="header-contacts-link main-link link" href="">
+                                        <svg width="16" height="12" class="header-contacts-icon">
+                                            <use href="./images/sprite.svg#icon-envelope"></use>
+                                        </svg>
+                                        <a class="contacts-link main-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                                    </a>
+                                </li>
+                            </a>
+                        </ul>
+                        <ul class="header-contacts-list list">
+                            <a class="custom link" href=""></a><li class="header-contacts-item">
+                                <a class="header-contacts-link main-link link" href="">
+                                    <svg width="10" height="16" class="header-contacts-icon">
+                                        <use href="./images/sprite.svg#icon-smartphone"></use>
+                                    </svg>
+                                </a>
+                                <a class="contacts-link main-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            </li>
+                        </ul>                        
+                    </li>
+                    <li class="contacts-item"></li>
+                </ul>
+            </div>           
         </div>
     </header>
     <main>
@@ -53,21 +78,41 @@
             <div class="container">
                 <ul class="list about-list">
                     <li class="about-item">
+                        <a class="about-link link" href="">
+                            <svg class="about-icon">
+                                <use href="./images/sprite.svg#icon-antenna"></use>
+                            </svg>
+                        </a>
                         <h3 class="about-main-name">Внимание к деталям</h3>
                         <p class="about-us">Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
                     <li class="about-item">
+                        <a class="about-link link" href="">
+                            <svg class="about-icon">
+                                <use href="./images/sprite.svg#icon-clock"></use>
+                            </svg>
+                        </a>
                         <h3 class="about-main-name">Пунктуальность</h3>
                         <p class="about-us">Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
                     <li class="about-item">
+                        <a class="about-link link" href="">
+                            <svg class="about-icon">
+                                <use href="./images/sprite.svg#icon-diagram"></use>
+                            </svg>
+                        </a>
                         <h3 class="about-main-name">Планирование</h3>
                         <p class="about-us">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
                     <li class="about-item">
+                        <a class="about-link link" href="">
+                            <svg class="about-icon">
+                                <use href="./images/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                        </a>
                         <h3 class="about-main-name">Современные технологии</h3>
                         <p class="about-us">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                         </p>
@@ -253,19 +298,106 @@
 
         <!--REGULAR-CUSTOMER-->
         <section class="customers">
-            <div>
+            <div class="container">
                 <h2 class="work-title">Постоянные клиенты</h2>
+                <ul class="customers-list list">
+                    <li class="customers-list-item">
+                        <a class="customers-list-link link" href="">
+                            <svg class="customers-list-icon one">
+                                <use href="./images/sprite.svg#icon-logo-one"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a class="customers-list-link link" href="">
+                            <svg class="customers-list-icon two">
+                                <use href="./images/sprite.svg#icon-logo-two"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a class="customers-list-link link" href="">
+                            <svg class="customers-list-icon three">
+                                <use href="./images/sprite.svg#icon-logo-three"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a class="customers-list-link link" href="">
+                            <svg class="customers-list-icon four">
+                                <use href="./images/sprite.svg#icon-logo-four"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a class="customers-list-link link" href="">
+                            <svg class="customers-list-icon five">
+                                <use href="./images/sprite.svg#icon-logo-five"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a class="customers-list-link link" href="">
+                            <svg class="customers-list-icon six">
+                                <use href="./images/sprite.svg#icon-logo-six"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
     <footer>
         <div class="main-footer container">
-            <a class="logotype-footer link" href="" lang="en">Web<span class="footer-accent">Studio</span></a>
-            <address class="address address-list">
-                <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-                <a class="contacts-link-footer link" href="mailto:info@example.com">info@example.com</a>
-                <a class="contacts-link-footer link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </address>
+            <ul class="social-footer-list list">
+                <li>
+                    <a class="logotype-footer link" href="" lang="en">Web<span class="footer-accent">Studio</span></a>
+                </li>
+                <li>
+                    <address class="address address-list">
+                        <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+                        <a class="contacts-link-footer link" href="mailto:info@example.com">info@example.com</a>
+                        <a class="contacts-link-footer link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </address>
+                </li>
+            </ul>
+            <ul class="social-footer-list second-list list">
+                <li>
+                    <p class="social-footer-name">присоединяйтесь</p>
+                </li>
+                <li class="social-footer-item">
+                    <ul class="footer-icon-list list">
+                        <li class=" ">
+                            <a class="social-footer-link link" href="">
+                                <svg class="social-footer-icon">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icon-item">
+                            <a class="social-footer-link link" href="">
+                                <svg class="social-footer-icon">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icon-item">
+                            <a class="social-footer-link link" href="">
+                                <svg class="social-footer-icon">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icon-item">
+                            <a class="social-footer-link link" href="">
+                                <svg class="social-footer-icon">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
