--- a/index.html
+++ b/index.html
@@ -35,30 +35,27 @@
             <div class="contacts-container">
                 <ul class="contacts-list list">
                     <li class="contacts-item">
-                        <ul class="header-contacts-list list">
-                            <a class="custom link" href="">
-                                <li class="header-contacts-item">
-                                    <a class="header-contacts-link main-link link" href="">
-                                        <svg width="16" height="12" class="header-contacts-icon">
+                        <a class="custom link" href="">
+                            <ul class="header-contacts-list list">
+                                <li class="header-contacts-item">                                     
+                                        <a class="contacts-link main-link mail link" href="mailto:info@devstudio.com"><svg width="16" height="12" class="header-contacts-icon">
                                             <use href="./images/sprite.svg#icon-envelope"></use>
-                                        </svg>
-                                        <a class="contacts-link main-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                                    </a>
+                                        </svg>info@devstudio.com</a>
                                 </li>
-                            </a>
-                        </ul>
-                        <ul class="header-contacts-list list">
-                            <a class="custom link" href=""></a><li class="header-contacts-item">
-                                <a class="header-contacts-link main-link link" href="">
-                                    <svg width="10" height="16" class="header-contacts-icon">
+                            </ul>
+                        </a>
+                    </li>    
+                    <li class="contacts-item">
+                        <a class="custom link" href="">
+                            <ul class="header-contacts-list list">
+                                <li class="header-contacts-item">
+                                    <a class="contacts-link main-link link" href="tel:+380961111111"><svg width="10" height="16" class="header-contacts-icon">
                                         <use href="./images/sprite.svg#icon-smartphone"></use>
-                                    </svg>
-                                </a>
-                                <a class="contacts-link main-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                            </li>
-                        </ul>                        
+                                    </svg>+38 096 111 11 11</a>
+                                </li>
+                            </ul>
+                        </a>
                     </li>
-                    <li class="contacts-item"></li>
                 </ul>
             </div>           
         </div>
