--- a/portfolio.html
+++ b/portfolio.html
@@ -33,37 +33,24 @@
                     </li>
                 </ul>
             </nav>
-            <div class="contacts-container">
-                <ul class="contacts-list list">
-                    <li class="contacts-item">
-                        <ul class="header-contacts-list list">
-                            <a class="custom link" href="">
-                                <li class="header-contacts-item">
-                                    <a class="header-contacts-link main-link link" href="">
-                                        <svg width="16" height="12" class="header-contacts-icon">
-                                            <use href="./images/sprite.svg#icon-envelope"></use>
-                                        </svg>
-                                        <a class="contacts-link main-link mail link"
-                                            href="mailto:info@devstudio.com">info@devstudio.com</a>
-                                    </a>
-                                </li>
-                            </a>
-                        </ul>
-                        <ul class="header-contacts-list list">
-                            <a class="custom link" href=""></a>
-                            <li class="header-contacts-item">
-                                <a class="header-contacts-link main-link link" href="">
-                                    <svg width="10" height="16" class="header-contacts-icon">
-                                        <use href="./images/sprite.svg#icon-smartphone"></use>
-                                    </svg>
-                                </a>
-                                <a class="contacts-link main-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                            </li>
-                        </ul>
+            <ul class="contacts-list list">
+                    <li class="header-contacts-item">
+                        <a class="header-contacts-link main-link link" href="">
+                            <svg width="16" height="12" class="header-contacts-icon">
+                                <use href="./images/sprite.svg#icon-envelope"></use>
+                            </svg>
+                            <a class="contacts-link main-link mail link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </a>
                     </li>
-                    <li class="contacts-item"></li>
-                </ul>
-            </div>
+                    <li class="header-contacts-item">
+                        <a class="header-contacts-link main-link link" href="">
+                            <svg width="10" height="16" class="header-contacts-icon">
+                                <use href="./images/sprite.svg#icon-smartphone"></use>
+                            </svg>
+                        <a class="contacts-link main-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+            </ul>
         </div>
     </header>
     <main>
@@ -182,57 +169,49 @@
         </section>
     </main>
     <footer>
-            <div class="main-footer container">
-                <ul class="social-footer-list list">
-                    <li>
-                        <a class="logotype-footer link" href="" lang="en">Web<span class="footer-accent">Studio</span></a>
+        <div class="footer-container container">
+            <div class="main-footer">
+                <a class="logotype-footer link" href="" lang="en">Web<span class="footer-accent">Studio</span></a>
+                <address class="address address-list">
+                    <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+                    <a class="contacts-link-footer link" href="mailto:info@example.com">info@example.com</a>
+                    <a class="contacts-link-footer link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </address>
+            </div>
+            <div class="second-footer">
+                <p class="social-footer-name">присоединяйтесь</p>
+                <ul class="footer-icon-list list">
+                    <li class="footer-icon-item">
+                        <a class="social-footer-link link" href="">
+                            <svg class="social-footer-icon">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li>
-                        <address class="address address-list">
-                            <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-                            <a class="contacts-link-footer link" href="mailto:info@example.com">info@example.com</a>
-                            <a class="contacts-link-footer link" href="tel:+380991111111">+38 099 111 11 11</a>
-                        </address>
+                        <a class="social-footer-link link" href="">
+                            <svg class="social-footer-icon">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                </ul>
-                <ul class="social-footer-list second-list list">
                     <li>
-                        <p class="social-footer-name">присоединяйтесь</p>
+                        <a class="social-footer-link link" href="">
+                            <svg class="social-footer-icon">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="social-footer-item">
-                        <ul class="footer-icon-list list">
-                            <li class=" ">
-                                <a class="social-footer-link link" href="">
-                                    <svg class="social-footer-icon">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-icon-item">
-                                <a class="social-footer-link link" href="">
-                                    <svg class="social-footer-icon">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-icon-item">
-                                <a class="social-footer-link link" href="">
-                                    <svg class="social-footer-icon">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-icon-item">
-                                <a class="social-footer-link link" href="">
-                                    <svg class="social-footer-icon">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                    <li>
+                        <a class="social-footer-link link" href="">
+                            <svg class="social-footer-icon">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
+        </div>
     </footer>
 </body>
 
